<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/advisory"
        android:id="@+id/toolbar"
        android:background="#3F51B5"
        android:elevation="10dp"
        app:titleTextColor="@android:color/white"/>
    <RelativeLayout
        android:id="@+id/advisory_rel1"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_margin="10dp"
            android:id="@+id/videoCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:text="@string/vcall_text"
            android:textColor="#fff"
            android:foreground="?android:attr/selectableItemBackground"/>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/phoneCall"
            android:layout_below="@id/videoCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:text="@string/call_text"
            android:textColor="#fff"
            android:foreground="?android:attr/selectableItemBackground"/>
        <Button
            android:layout_margin="10dp"
            android:id="@+id/chat"
            android:layout_below="@+id/phoneCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:text="@string/chat_text"
            android:textColor="#fff"
            android:foreground="?android:attr/selectableItemBackground"/>

    </RelativeLayout>

</RelativeLayout>